Fix footer overflow and strong text

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 .ducky-blue {background-color: #08549E !important;} .ducky-skyblue {background-color: #81B1E0 !important;} 
 
-.ducky-skyblue-text {color: #81B1E0 !important;} .ducky-blue-text {color: #08549E !important;} 
+.ducky-skyblue-text {color: #81B1E0 !important;} .ducky-blue-text {color: #08549E !important;}
 
 .navbar .nav-item:hover {background-color: #0E4880 !important;} 
 
@@ -34,11 +34,11 @@
 }
 
 .nom-team {
-    font-size: 30px
-    text-align: center
-    display: block
-    margin-bottom: 10px
-    margin-top: 30px
+    font-size: 30px;
+    text-align: center;
+    display: block;
+    margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 .texte-role-team {
@@ -71,4 +71,13 @@ pre.line-numbers code span.new-line::before {
     padding: 0em .5em;
     margin-right: 2em;
     -webkit-user-select: none;
+}
+
+.row {
+    margin-right: 0;
+    margin-left: 0;
+}
+
+strong {
+    font-weight: bold;
 }
